Mobile overflow fix

--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -16,6 +16,7 @@
 
 .background {
   @include absoluteBackground(1);
+  overflow: hidden;
 }
 
 .topLayer {
